* - Add some cool features for screenshot menu (replay from file, preview animation, preview screenshot, 2 gtkfilechooserbutton, change default folders etc...).
* - Remove old pix directory.
* - Benjamin begins to work on new debugger.Add a menu, some basic actions.
* ---15/04/11---
* - Benjamin add a set of function to handle user defined icons. A lot of improvement on the debugger (add step action, pause).
* - Use tilem logo as default background in the screenshot menu, add some pix into the shared data directory.
* - Remove old debugger pix.
* - Add GtkSpinnerAnimation in the screenshot menu. Improve look and feel (fix fill/expand properties for the box, size of the widgets etc...).
* ---17/04/11---
* - Benjamin add a ti83p symbol file which allow to replace flag values by theirs labels in the debugger (and more other things). Debugger looks like very good.
* ---19/04/11---
* - I've added a ti83 symbol file (but it could contains some mistakes...). Flags are correctly printed for my loved ti83 regular ;)
* ---27/04/11---
* - Root window size could be forced (but the ratio could be strand if you specify stanges values ... Because ration is calculated on the start width and heigth).
* ---02/05/11---
* - Add the icons for the right click menu (stock icons currently).
* - Export all menu related code in a separate file called menu.c. It could maybe be done by UI in the future, but it works fine as it for the moment ;)
* - Add drag and drop support for loading files :) :) :) :) :) (code is currently really ugly)
* ---09/05/11---
* - Create a new TilemGuiStateFlags structure ot group the running state of the gui (skinless, recording macro, etc...) and export it into TilemCalcEmu instead GLOBAL_SKIN_INFOS.
* - Completely remove GLOBAL_SKIN_INFOS structure from tilem2.
* ---10/05/11---
* - Change strutures to look like a object oriented model. But in some case it's not really well implemented.
*/
